--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 
     #spielbereich {
       position: relative;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
+  width: 600px;    /* Breite auf 600 Pixel */
+  height: 400px;   /* Höhe auf 400 Pixel */
+  overflow: hidden;
+  margin: 40px auto; /* zentriert das Spielfeld horizontal mit etwas Abstand oben/unten */
+  border: 2px solid white; /* Optional: damit man Spielfeld sieht */
+  border-radius: 10px;     /* Optional: abgerundete Ecken */
+  background: radial-gradient(ellipse at center, rgba(100, 120, 180, 0.2), rgba(30, 30, 60, 0.3));
     }
 
     #startscreen {
